--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,7 @@ SURFARI_ADMIN_ROLES=255,254
 FRONTEND_URL=https://surfari.io
 JWT_SECRET=supersecret
 MONGODB_URI=mongodb+srv://NessaOwner:Jason2007@cluster0.jljekxc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DISCORD_CLIENT_ID=1400669797804412969
+DISCORD_CLIENT_SECRET=Rljw1sLTgmDnYu4Qjo9ETI6LOKQNruEd
+SURFARI_WEBHOOK_SECRET=another-long-random-string 
+BOT_WEBHOOK_URL=https://<your-bot-host>            
