--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 ROBLOX_CLIENT_ID=2046057965071530424
 ROBLOX_CLIENT_SECRET=RBX-Q2m6bFE6_kaHk5Gfa6cO6PN9rYLfE3ZLQn4l6hmLQkBK0xWmSsdDOvmKls2-FQqQ
-ROBLOX_REDIRECT_URI=https://surfari.io/auth/callback
+ROBLOX_REDIRECT_URI=https://surfari.onrender.com/auth/callback
 SURFARI_GROUP_ID=32723208
 SURFARI_ADMIN_ROLES=255,254
 FRONTEND_URL=https://surfari.io
