--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,4 @@ DISCORD_CLIENT_ID=1400669797804412969
 DISCORD_CLIENT_SECRET=Rljw1sLTgmDnYu4Qjo9ETI6LOKQNruEd
 SURFARI_WEBHOOK_SECRET=another-long-random-string 
 BOT_WEBHOOK_URL=https://<your-bot-host>            
+REIDRECT_URL=https://surfari.onrender.com/auth/callback
